--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,11 @@
 language: java
 jdk:
   - oraclejdk8
+
+# build site
+scripts: true
+
+# deploy to netlify
+after_success:
+   - chmod +x ./scripts/deploy.sh
+   - ./scripts/deploy.sh
