--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,8 @@ task installMocha(type: NpmTask) {
 
 task runMocha(type: NodeTask, dependsOn: [compileTestKotlin2Js, populateNodeModules, installMocha]) {
     script = file('node_modules/mocha/bin/mocha')
-    args = [compileTestKotlin2Js.outputFile, "--timeout","60000"]
+//    "--grep","DijkstraTest"
+    args = [compileTestKotlin2Js.outputFile,"--timeout","60000"]
 }
 
 
